2002-11-27  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* ins-footnote.el: Removed.

2002-11-25  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* ins-footnote.el: Fixed bug in `insf-insert-footnote'.
	* eng-complete.el: Fixed typo.

2002-10-24  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* eng-complete.el: Made significantly shorter.

	* ins-footnote.el: Added copyright notice.

	* html-edit.el: Tidied up and added copyright notice.

	* google.el: Slightly modified file header.

	* get-rfc.el: Added file header.

	* cite.el: Added autoload for `timezone-make-date-arpa-standard'.

	* a2r.el: Added file header and corrected minor docstring typos.

2002-10-08  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* find-lib.el: Reverted to earlier version.  i.e. summer changes
	backed out, since they seemed to be significantly slower.
	(find-lib-use-cache): New variable.
	(find-lib-{locate,load,find}-file): Modified to make use of it.

2002-10-06  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* a2r.el: Added to CVS.

	* ascii-table.el: Integrated summer changes into CVS.

	* cite.el: Integrated summer changes into CVS.

	* css-mode.el: Added to CVS.

	* cua-emul.el: Integrated summer changes into CVS.

	* find-lib.el: Integrated summer changes into CVS.

	* google.el: Integrated summer changes into CVS.

	* html-edit.el: Added to CVS.

	* ins-footnote.el: Added to CVS.

2002-09-04  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* css-mode.el (css-mode-skip-back-over-comments): Add optional
	BOUND argument to counter moving further than wanted.

	* ins-footnote.el (insf-current-footnotes): Modified so that the
	footnotes are returned sans their outside delimiters.

	* html-edit.el: New file.  Web-page automation.

2002-08-29  lawrence mitchell  <s0198183@sms.ed.ac.uk>

	* css-mode.el: New file.  Minimal Cascading Style Sheet mode,
	keywords are up to date with CSS2 <URL:
	http://www.w3.org/TR/REC-CSS2/>.

2002-08-14  lawrence mitchell <s0198183@sms.ed.ac.uk>
